--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,12 +1,11 @@
 .container{
   display:flex;
-  align-items: center;
   background-color: #f0f2f5;
 }
 
 .left{
-  width: 50%;
-  padding-top: 150px;
+  width: 43%;
+  padding-top: 170px;
   padding-left: 150px;
 }
 .left1 > p{
@@ -19,11 +18,73 @@
 }
 .right{
   width: 50%;
-  padding-left: 200px;
+  padding-left: 80px;
+  padding-top: 120px;
 }
-.login{
+.loginform{
   background-color: white;
   width: 380px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px 5px grey;
+  border-radius: 6px;
+  padding: 5px 10px;
+  box-sizing: border-box;
 }
+
+
+.loginform > input{
+  width: 100%;
+  padding: 14px 16px;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 1px #dddfe2;
+  margin: 10px 0;
+  font-size:15px;
+}
+.loginform > input :focus{
+  border: 1px solid #1877f2;
+  box-shadow: 0 0 0 2px #e7f3ff;
+
+}
+.login > button{
+  background-color: #1877f2;
+  border: none;
+  border-radius: 6px;
+  font-size: 20px;
+  line-height: 48px;
+  padding: 0 16px;
+  width: 100%;
+  color: white;
+}
+.login{
+  text-align: center;
+}
+.reset > h1{
+  color: #1877f2;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+
+}
+.reset >h1 :hover{
+  text-decoration: underline;
+}
+.signup > button{
+  background-color: #42b72a;
+  border: none;
+  border-radius: 6px;
+  font-size: 20px;
+  line-height: 48px;
+  padding: 0 16px;
+  width: 60%;
+  color: white;
+  }
+  .SIGNUP{
+    text-align: center;
+    padding-bottom: 10px;
+  }
+  .text{
+    width: 380px;
+    text-align: center;
+  }
+  .text > p{
+    text-align: centre;
+  }
