--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -132,3 +132,39 @@
 .content div{
   padding: 10px;
 }
+@media screen and (max-width: 800px) {
+    .container{
+      display: flex;
+      flex-direction: column;
+      padding-top: 0px;
+      max-width: 100%;
+    }
+    .left{
+      width: 70%;
+      padding-top: 0px;
+      padding-left: 8vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+    }
+    .left1{
+      display: flex;
+      flex-direction: column;
+    }
+    .right{
+      width: 50%;
+      padding-left: 80px;
+      padding-top: 0px;
+    }
+
+    .loginform{
+      background-color: white;
+      width: 380px;
+      border-radius: 6px;
+      box-sizing: border-box;
+    }
+    .body{
+      max-width: 10%;
+    }
+}
